fixed text wrapping issue

--- a/promotionalSite/app/assets/stylesheets/styles.css
+++ b/promotionalSite/app/assets/stylesheets/styles.css
@@ -121,3 +121,16 @@
 	text-shadow: 2px 2px 20px #000000;
 }
 
+
+.modal {
+	color:black;
+	font-style: oblique;
+	text-shadow: none;
+	text-orientation: upright;
+	line-height: 1.0;
+}
+
+
+
+
+
